app/javascript/flavours/aether/styles/about.scss
$maximum-width: 1235px;
$fluid-breakpoint: $maximum-width + 20px;

.container {
  box-sizing: border-box;
  max-width: $maximum-width;
  margin: 0 auto;
  position: relative;

  @media screen and (max-width: $fluid-breakpoint) {
    width: 100%;
    padding: 0 10px;
  }
}

.brand {
  position: relative;
  text-decoration: none;
}

.rules-list {
  font-size: 0.9rem;
  color: var(--ui-font-color);
  counter-reset: list-counter;

  li {
    position: relative;
    border-bottom: 1px solid var(--ui-body-color);
    padding: 1em 1.75em;
    padding-inline-start: 3em;
    font-weight: 500;
    counter-increment: list-counter;

    &::before {
      content: counter(list-counter);
      position: absolute;
      inset-inline-start: 0;
      top: 50%;
      transform: translateY(-50%);
      background: var(--ui-highlight-color);
      color: var(--ui-body-secondary-color);
      border-radius: 50%;
      width: 4ch;
      height: 4ch;
      font-weight: 500;
      display: flex;
      justify-content: center;
      align-items: center;
    }
  }
}

/* Components */

.image {
  position: relative;
  overflow: hidden;

  &__preview {
    position: absolute;
    top: 0;
    inset-inline-start: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  &.loaded &__preview {
    display: none;
  }

  img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border: 0;
    background: transparent;
    opacity: 0;
  }

  &.loaded img {
    opacity: 1;
  }
}

.link-footer {
  flex: 0 0 auto;
  padding: 10px;
  padding-top: 20px;
  z-index: 1;
  font-size: 0.8rem;

  p {
    color: var(--ui-font-secondary-color);
    margin-bottom: 20px;

    strong {
      font-weight: 500;
    }

    a {
      color: var(--ui-font-secondary-color);
      text-decoration: underline;

      &:hover,
      &:focus,
      &:active {
        text-decoration: none;
      }
    }
  }
}

.about {
  padding: 20px;

  @media screen and (min-width: $no-gap-breakpoint) {
    border-radius: 4px;
  }

  &__footer {
    color: var(--ui-font-secondary-color);
    text-align: center;
    font-size: 0.8rem;
    margin-top: 20px;
  }

  &__header {
    margin-bottom: 30px;

    &__hero {
      width: 100%;
      height: auto;
      aspect-ratio: 1.9;
      background: var(--ui-body-color);
      border-radius: 8px;
      margin-bottom: 30px;
    }

    h1,
    p {
      text-align: center;
    }

    h1 {
      font-size: 1.5rem;
      line-height: 1.5;
      font-weight: 700;
      margin-bottom: 10px;
    }

    p {
      font-size: 1rem;
      font-weight: 400;
      color: var(--ui-font-secondary-color);
    }
  }

  &__meta {
    background: var(--ui-body-color);
    border-radius: 4px;
    display: flex;
    margin-bottom: 30px;
    font-size: 1rem;

    &__column {
      box-sizing: border-box;
      width: 50%;
      padding: 20px;
    }

    &__divider {
      width: 0;
      border: 0;
      border-style: solid;
      border-color: var(--ui-body-color);
      border-left-width: 1px;
      min-height: calc(100% - 60px);
      flex: 0 0 auto;
    }

    h4 {
      font-size: 0.95rem;
      text-transform: uppercase;
      color: var(--ui-font-color);
      font-weight: 500;
      margin-bottom: 20px;
    }

    @media screen and (width <= 600px) {
      display: block;

      h4 {
        text-align: center;
      }

      &__column {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
      }

      &__divider {
        min-height: 0;
        width: 100%;
        border-left-width: 0;
        border-top-width: 1px;
      }
    }

    .layout-multiple-columns & {
      display: block;

      h4 {
        text-align: center;
      }

      &__column {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
      }

      &__divider {
        min-height: 0;
        width: 100%;
        border-left-width: 0;
        border-top-width: 1px;
      }
    }
  }

  &__mail {
    color: var(--ui-font-color);
    text-decoration: none;
    font-weight: 500;

    &:hover,
    &:focus,
    &:active {
      text-decoration: underline;
    }
  }

  .link-footer {
    padding: 0;
    text-align: center;
    font-size: 0.8rem;

    @media screen and (min-width: $no-gap-breakpoint) {
      display: none;
    }
  }

  .account {
    padding: 0;
    border: 0;
  }

  .account__avatar-wrapper {
    margin-inline-start: 0;
  }

  .account__relationship {
    display: none;
  }

  &__section {
    margin-bottom: 10px;

    &__title {
      font-size: 1.2rem;
      font-weight: 600;
      padding: 20px;
      border-radius: var(--ui-border-radius) var(--ui-border-radius) 0 0;
      background: var(--ui-body-color);
      color: var(--ui-font-color);
    }

    &.active &__title {
      border-radius: var(--ui-border-radius) var(--ui-border-radius) 0 0;
    }

    &__body {
      border-top: 0;
      padding: 20px;
      font-size: 1rem;
      background: var(--ui-body-secondary-color);
      border-bottom-left-radius: var(--ui-border-radius);
      border-bottom-right-radius: var(--ui-border-radius);
    }
  }

  &__domain-blocks {
    margin-top: 30px;
    background: var(--ui-page-background);
    border: 1px solid var(--ui-body-color);
    border-radius: 4px;

    &__domain {
      border-bottom: 1px solid var(--ui-body-color);
      padding: 10px;
      font-size: 1rem;
      color: var(--ui-font-secondary-color);

      &:nth-child(2n) {
        background: var(--ui-body-color);
      }

      &:last-child {
        border-bottom: 0;
      }

      &__header {
        display: flex;
        gap: 10px;
        justify-content: space-between;
        font-weight: 500;
        margin-bottom: 4px;
      }

      h6 {
        color: var(--ui-font-secondary-color);
        font-size: inherit;
      }

      p {
        color: var(--ui-font-bright-color);
        margin-top: 12px;
      }
    }
  }
}

@media screen and (min-width: $widescreen-breakpoint) {
  .layout-single-column {
    .about__left-column {
      max-width: var(--ui-main-column-width);
      display: block;
    }

    .about__right-column {
      width: var(--ui-secondary-profile-column-width);

      .about__section__title {
        margin-top: 10px;
      }
    }

    .about {
      display: flex;
      flex-direction: row;
      row-gap: 15px;
      column-gap: 15px;
      width: 100%;
    }
  }
}

.rules_footer {
  text-align: center;
  margin-top: 1em;
}

